everything in correct alignment. just need to add bg pattern and make the bg on nav white.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -173,7 +173,6 @@ h2 {
     float: left;
     width: 200px;
     height: auto;
-    margin-top: 10px;
     margin-right: 25px;
 }
 
@@ -229,8 +228,9 @@ input[type=submit] {
         margin-bottom: 5px;
     }
     h1 {
-        margin-top: 0px;
-        padding-bottom: 5px;
+        margin-top: 10px;
+        margin-bottom: 20px;
+        padding-bottom: 20px;
         font-size: 25px;
         line-height: 25px;
         border-bottom: 2px solid #dddddd;
@@ -246,6 +246,7 @@ input[type=submit] {
     #masthead {
         text-align: center;
         border-bottom: 1px solid #cccccc;
+        width: 100%;
     }
     #logo {
         width: 95.5vw;
@@ -265,15 +266,18 @@ input[type=submit] {
         width: 25%;
     }
     #main-container {
-        max-height: 50vh;
-        margin: 20px;
-        )
+        padding-right: 5vw;
+        padding-left: 5vw;
     }
     .main-section {
-        padding: 30px;
+        padding: 10px 20px 10px 20px;
+        max-width: 100%;
     }
     .auth-image {
         width: 100%;
-        padding-bottom: 10px;
+        padding-bottom: 20px;
+    }
+    .footer {
+        width: 100%;
     }
 }
